# fungi

./: .gitignore  .ocamlinit  LICENSE  README.md  bubsort.ml  dune  dune-project  examplgame.gm  foobar.dot  foobar.gm  fungi.opam  mygraph.ml  myprint.ml  myset.ml  mytree.ml  ocamlinit  paritygame.ml  pickle.ml  set.mli.back  solve.ml  todo.txt  tree.mli.back  utils.ml
docs/: references.md
examples/mazesolver/: dune-project
examples/mazesolver/lib/: dune
examples/paritygame/: dune-project
examples/paritygame/lib/: dune  game.ml  pickle.ml  solve.ml
examples/paritygame/res/: game1.dot  game1.txt
mlton/: libparity.mlb  millet.toml  mygraph.sml  mymap.sml  myseq.sml  myset.sml
ocaml/: .ocamlinit  dune-project  fungi.opam  libparity.opam  mygraph.ml  myset.ml  paritygame.ml  pickle.ml  solve.ml
ocaml/docs/: foobar.gm
ocaml/examples/mazesolver/: .ocamlinit
ocaml/examples/mazesolver/lib/: dune
ocaml/examples/network/: .ocamlinit
ocaml/examples/network/lib/: dune
ocaml/examples/paritygame/: .ocamlinit  dune  main.ml  paritygame.ml  solve.ml  utils.ml
ocaml/examples/paritygame/lib/: dune  game.ml  pickle.ml  solve.ml  utils.ml
ocaml/src/: axiom.ml  dune  graph.ml  heap.ml  treeset.ml  unionfind.ml
ocaml/test/: dune  treebench.ml  treeprops.ml
src/: axiom.ml  dune  graph.ml  heap.ml  treeset.ml  unionfind.ml
test/: dune  graph_matrix.ml  graphops.ml  treebench.ml  treeprops.ml
