(test
 (name treeprops)
 (libraries fungi alcotest qcheck-core qcheck-alcotest)
 (modules treeprops))

(test
 (name graphops)
 (libraries fungi alcotest qcheck-core qcheck-alcotest)
 (modules graphops))

(test
 (name treebench)
 (modes byte exe)
 (libraries fungi core_bench core_unix.command_unix core)
 (preprocess no_preprocessing)
 (modules treebench))
